--- a/EnIyiProje/App.config
+++ b/EnIyiProje/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="EnIyiProje.Properties.Settings.SchoolConnectionString"
+            connectionString="Data Source=Desktop-HU9OABO;Initial Catalog=School;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
