--- a/EnIyiProje/EnIyiProje.csproj
+++ b/EnIyiProje/EnIyiProje.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,14 +46,175 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AnaSayfa.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AnaSayfa.Designer.cs">
+      <DependentUpon>AnaSayfa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GirisEkrani.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GirisEkrani.Designer.cs">
+      <DependentUpon>GirisEkrani.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NotEkle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NotEkle.Designer.cs">
+      <DependentUpon>NotEkle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NotlariYonet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NotlariYonet.Designer.cs">
+      <DependentUpon>NotlariYonet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NotOrt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NotOrt.Designer.cs">
+      <DependentUpon>NotOrt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NotuSil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NotuSil.Designer.cs">
+      <DependentUpon>NotuSil.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NotYazdir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NotYazdir.Designer.cs">
+      <DependentUpon>NotYazdir.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OgrIstatistik.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrIstatistik.Designer.cs">
+      <DependentUpon>OgrIstatistik.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KursDuzenle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KursDuzenle.Designer.cs">
+      <DependentUpon>KursDuzenle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KursEkle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KursEkle.Designer.cs">
+      <DependentUpon>KursEkle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KurslariYazdir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KurslariYazdir.Designer.cs">
+      <DependentUpon>KurslariYazdir.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KurslariYonet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KurslariYonet.Designer.cs">
+      <DependentUpon>KurslariYonet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KursSil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KursSil.Designer.cs">
+      <DependentUpon>KursSil.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OgrEkle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrEkle.Designer.cs">
+      <DependentUpon>OgrEkle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OgrGuncelleSil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrGuncelleSil.Designer.cs">
+      <DependentUpon>OgrGuncelleSil.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OgrListele.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrListele.Designer.cs">
+      <DependentUpon>OgrListele.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OgrPrint.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrPrint.Designer.cs">
+      <DependentUpon>OgrPrint.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OgrYonet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrYonet.Designer.cs">
+      <DependentUpon>OgrYonet.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchoolDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SchoolDataSet1.xsd</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AnaSayfa.resx">
+      <DependentUpon>AnaSayfa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GirisEkrani.resx">
+      <DependentUpon>GirisEkrani.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NotEkle.resx">
+      <DependentUpon>NotEkle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NotlariYonet.resx">
+      <DependentUpon>NotlariYonet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NotOrt.resx">
+      <DependentUpon>NotOrt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NotuSil.resx">
+      <DependentUpon>NotuSil.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NotYazdir.resx">
+      <DependentUpon>NotYazdir.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrIstatistik.resx">
+      <DependentUpon>OgrIstatistik.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KursDuzenle.resx">
+      <DependentUpon>KursDuzenle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KursEkle.resx">
+      <DependentUpon>KursEkle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KurslariYazdir.resx">
+      <DependentUpon>KurslariYazdir.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KurslariYonet.resx">
+      <DependentUpon>KurslariYonet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KursSil.resx">
+      <DependentUpon>KursSil.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrEkle.resx">
+      <DependentUpon>OgrEkle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrGuncelleSil.resx">
+      <DependentUpon>OgrGuncelleSil.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrListele.resx">
+      <DependentUpon>OgrListele.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrPrint.resx">
+      <DependentUpon>OgrPrint.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrYonet.resx">
+      <DependentUpon>OgrYonet.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -61,6 +223,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -71,9 +234,41 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SchoolDataSet1.xsc">
+      <DependentUpon>SchoolDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="SchoolDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SchoolDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SchoolDataSet1.xss">
+      <DependentUpon>SchoolDataSet1.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\a___1__E8D_icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\book_4nc_icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Webalys-Kameleon.pics-Student-3.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\avatar-default.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\refresh-512.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\find-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Search-button.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
